update DefaultAggregationLoader